--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <events-app-root></events-app-root>
+  <div class="container">
+    <events-app-root></events-app-root>
+  </div>
 </body>
 </html>
